--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         src="https://i.pinimg.com/originals/f9/36/c5/f936c5a35c35c3f4d7c498fb8edad0f1.png"
       />
       <div class="hand"></div>
+      <div class="minute"></div>
     </div>
     <script src="main.js"></script>
   </body>
