adapted the code to include minutes and hour hands. added a ticking sound that toggles when the clock is clicked.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Clock Workshop</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
+    <div id="text-container">
+      <p>Click Clock for Ticks!</p>
+    </div>
     <div id="clock-container">
-      <img
-        src="https://i.pinimg.com/originals/f9/36/c5/f936c5a35c35c3f4d7c498fb8edad0f1.png"
-      />
-      <div class="hand"></div>
-      <div class="minute"></div>
+      <img id="clock-face" src="https://i.pinimg.com/originals/f9/36/c5/f936c5a35c35c3f4d7c498fb8edad0f1.png"/>
+      <div class="second-hand"></div>
+      <div class="minute-hand"></div>
+      <div class="hour-hand"></div>
     </div>
     <script src="main.js"></script>
   </body>
